# nao_mumbler

./: .gitignore  .gitmodules  README.md
.qi/: path.conf  worktree.xml
micprocessor/: CMakeLists.txt  alsoundprocessing.cpp  alsoundprocessing.hpp  chatbot_query.cpp  chatbot_query.hpp  includes.ihh  main.cpp  qiproject.xml  speech_processor.cpp  speech_processor.hpp
